--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,8 @@
     }
   },
   "require": {
-    "php": ">=7.2.0",
-    "illuminate/support": "5.5.*|6.*|^7.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "7.2.6",
-    "mockery/mockery": "dev-master@dev",
-    "orchestra/testbench": "~3.5"
+    "php": ">=7.3",
+    "illuminate/support": "^7.0|^8.0"
   },
   "extra": {
     "branch-alias": {
