--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,10 @@
       "WebAppId\\SmartResponse\\": "src"
     }
   },
-  "autoload-dev": {
-    "psr-4": {
-      "WebAppId\\SmartResponse\\Tests\\": "src/tests"
-    }
-  },
   "require": {
     "php": ">=8.0",
-    "illuminate/support": "^8.0|^9.0"
+    "illuminate/support": "^8.0|^9.0",
+    "illuminate/database": "9.x-dev"
   },
   "extra": {
     "branch-alias": {
