--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=8.0",
     "illuminate/support": "^8.0|^9.0",
-    "illuminate/database": "9.x-dev"
+    "illuminate/database": "^8.0|^9.0"
   },
   "extra": {
     "branch-alias": {
