--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "webappid/smartresponse",
-  "version": "3.0.2",
+  "version": "3.1.2",
   "description": "SmartResponse simplifies consistent response handling in Laravel: supports Blade, redirect with messages, and JSON format.",
   "type": "library",
   "license": "MIT",
@@ -12,8 +12,7 @@
   ],
   "require": {
     "php": ">=8.0",
-    "illuminate/support": "^12.0",
-    "illuminate/database": "^12.0"
+    "laravel/framework": "^12.0"
   },
   "autoload": {
     "psr-4": {
